--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,15 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="accent_orange">#FFCC80</color>
+    <color name="background_cream">#FFF8E1</color>
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
+    <color name="icon_tint_dark">#424242</color>
+    <color name="icon_tint_medium">#8D8D8D</color>
+    <color name="icon_tint_medium_dark">#616161</color>
+    <color name="icon_tint_medium_dark_faded">#A0616161</color>
+    <color name="seekbar_track">#E0E0E0</color>
+    <color name="seekbar_progress">#616161</color>
+    <color name="seekbar_thumb">#424242</color>
 </resources>
