--- a/app/src/main/res/layout/fragment_playlist_detail.xml
+++ b/app/src/main/res/layout/fragment_playlist_detail.xml
@@ -10,59 +10,71 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
-    android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:fitsSystemWindows="true"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:liftOnScroll="false">
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:liftOnScroll="false">
 
-    <com.google.android.material.appbar.CollapsingToolbarLayout
-        android:id="@+id/collapsing_toolbar_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    app:contentScrim="?attr/colorPrimary"
-    app:expandedTitleMarginEnd="64dp"
-    app:expandedTitleMarginStart="48dp"
-    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-    <ImageView
-        android:id="@+id/header_image"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:contentDescription="@string/cd_album_art"
-    android:fitsSystemWindows="true"
-    android:scaleType="centerCrop"
-    app:layout_collapseMode="parallax"
-    tools:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/header_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/cd_album_art"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                tools:src="@drawable/ic_launcher_background" />
 
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    app:layout_collapseMode="pin"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-</com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-<androidx.core.widget.NestedScrollView
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:overScrollMode="never"
-app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:overScrollMode="never"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/songs_recycler_view"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:nestedScrollingEnabled="false"
-android:padding="8dp"
-app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-tools:listitem="@layout/song_card_long"
-tools:itemCount="10"/>
+        <!-- RecyclerView for songs -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/songs_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false"
+            android:padding="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/song_card_long"
+            tools:itemCount="10"/>
 
-</androidx.core.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <!-- ****** ADD THIS PROGRESS BAR ****** -->
+    <ProgressBar
+        android:id="@+id/loading_indicator_detail"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+    <!-- *********************************** -->
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
