--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.explore.ExploreFragment">
 
+    <!-- Search Input -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/search_input_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -18,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:startIconDrawable="@android:drawable/ic_menu_search"> <!-- Use standard search icon -->
+        app:startIconDrawable="@android:drawable/ic_menu_search">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search_edit_text"
@@ -30,6 +31,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Suggestions Header -->
     <TextView
         android:id="@+id/header_suggestions"
         android:layout_width="0dp"
@@ -43,6 +45,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_input_layout" />
 
+    <!-- Suggestions RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/suggestions_recycler_view"
         android:layout_width="0dp"
@@ -57,16 +60,17 @@
         app:layout_constraintTop_toBottomOf="@+id/header_suggestions"
         tools:listitem="@layout/song_card_long" />
 
+    <!-- Loading Indicator -->
     <ProgressBar
         android:id="@+id/loading_indicator"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_suggestions"
+        app:layout_constraintBottom_toBottomOf="@+id/suggestions_recycler_view"
+        app:layout_constraintEnd_toEndOf="@+id/suggestions_recycler_view"
+        app:layout_constraintStart_toStartOf="@+id/suggestions_recycler_view"
+        app:layout_constraintTop_toTopOf="@+id/suggestions_recycler_view"
         tools:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
